--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "through2": "^2.0.1",
     "gulp-util": "^3.0.7",
     "angular-gettext-tools": "https://github.com/douleutaras/angular-gettext-tools/tarball/master",
-    "lodash.isstring": "^4.17.5"
+    "lodash": "^4.17.5"
   },
   "devDependencies": {
     "chai": "^3.5.0",
