--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: false
 language: node_js
 node_js:
   - node
+before_script:
+  - npm config set //registry.npmjs.org/:_authToken $NPM_RO_API
 deploy:
   provider: npm
   email: v.klymenko@douleutaras.com
