--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@douleutarasgr/gulp-angular-gettext",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "Gulp plugin for extracting/compiling angular-gettext strings",
   "license": "MIT",
   "repository": "gabegorelick/gulp-angular-gettext",
@@ -26,7 +26,7 @@
   ],
   "main": "index.js",
   "dependencies": {
-    "@douleutarasgr/angular-gettext-tools": "^2.3.14",
+    "@douleutarasgr/angular-gettext-tools": "2.5.31",
     "gulp-util": "^3.0.7",
     "lodash.isstring": "^4.0.1",
     "through2": "^2.0.1"
